build/log/idf_py_stdout_output_9828
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\Lenovo\OneDrive\MASTER_IOT\ProyectoAreaTecnologia\ProyectoFinal-ANIOT-RPI1-RPI2\build\bootloader\esp-idf\esptool_py && C:\Users\Lenovo\.espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/Users/Lenovo/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/7] Building C object esp-idf/mqtt/CMakeFiles/__idf_mqtt.dir/mqtt_api.c.obj
FAILED: esp-idf/mqtt/CMakeFiles/__idf_mqtt.dir/mqtt_api.c.obj 
ccache C:\Users\Lenovo\.espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.4\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/build/config -IC:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt -IC:/Users/Lenovo/esp-idf/components/mqtt/esp-mqtt/include -IC:/Users/Lenovo/esp-idf/components/newlib/platform_include -IC:/Users/Lenovo/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/Lenovo/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/Lenovo/esp-idf/components/freertos/esp_additions/include/freertos -IC:/Users/Lenovo/esp-idf/components/freertos/esp_additions/include -IC:/Users/Lenovo/esp-idf/components/freertos/esp_additions/arch/xtensa/include -IC:/Users/Lenovo/esp-idf/components/esp_hw_support/include -IC:/Users/Lenovo/esp-idf/components/esp_hw_support/include/soc -IC:/Users/Lenovo/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/Lenovo/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/Lenovo/esp-idf/components/heap/include -IC:/Users/Lenovo/esp-idf/components/log/include -IC:/Users/Lenovo/esp-idf/components/soc/include -IC:/Users/Lenovo/esp-idf/components/soc/esp32 -IC:/Users/Lenovo/esp-idf/components/soc/esp32/include -IC:/Users/Lenovo/esp-idf/components/hal/esp32/include -IC:/Users/Lenovo/esp-idf/components/hal/include -IC:/Users/Lenovo/esp-idf/components/hal/platform_port/include -IC:/Users/Lenovo/esp-idf/components/esp_rom/include -IC:/Users/Lenovo/esp-idf/components/esp_rom/include/esp32 -IC:/Users/Lenovo/esp-idf/components/esp_rom/esp32 -IC:/Users/Lenovo/esp-idf/components/esp_common/include -IC:/Users/Lenovo/esp-idf/components/esp_system/include -IC:/Users/Lenovo/esp-idf/components/esp_system/port/soc -IC:/Users/Lenovo/esp-idf/components/esp_system/port/include/private -IC:/Users/Lenovo/esp-idf/components/xtensa/include -IC:/Users/Lenovo/esp-idf/components/xtensa/esp32/include -IC:/Users/Lenovo/esp-idf/components/lwip/include -IC:/Users/Lenovo/esp-idf/components/lwip/include/apps -IC:/Users/Lenovo/esp-idf/components/lwip/include/apps/sntp -IC:/Users/Lenovo/esp-idf/components/lwip/lwip/src/include -IC:/Users/Lenovo/esp-idf/components/lwip/port/include -IC:/Users/Lenovo/esp-idf/components/lwip/port/freertos/include -IC:/Users/Lenovo/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/Lenovo/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/Lenovo/esp-idf/components/esp_event/include -IC:/Users/Lenovo/esp-idf/components/tcp_transport/include -IC:/Users/Lenovo/esp-idf/components/esp-tls -IC:/Users/Lenovo/esp-idf/components/esp-tls/esp-tls-crypto -IC:/Users/Lenovo/esp-idf/components/mbedtls/port/include -IC:/Users/Lenovo/esp-idf/components/mbedtls/mbedtls/include -IC:/Users/Lenovo/esp-idf/components/mbedtls/mbedtls/library -IC:/Users/Lenovo/esp-idf/components/mbedtls/esp_crt_bundle/include -IC:/Users/Lenovo/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -IC:/Users/Lenovo/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -IC:/Users/Lenovo/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -IC:/Users/Lenovo/esp-idf/components/esp_timer/include -IC:/Users/Lenovo/esp-idf/components/nvs_flash/include -IC:/Users/Lenovo/esp-idf/components/esp_partition/include -IC:/Users/Lenovo/esp-idf/components/spi_flash/include -IC:/Users/Lenovo/esp-idf/components/json/cJSON -IC:/Users/Lenovo/esp-idf/examples/common_components/protocol_examples_common/include -IC:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/espressif__qrcode/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2=. -fmacro-prefix-map=C:/Users/Lenovo/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -Wno-error=format= -Wno-format -MD -MT esp-idf/mqtt/CMakeFiles/__idf_mqtt.dir/mqtt_api.c.obj -MF esp-idf\mqtt\CMakeFiles\__idf_mqtt.dir\mqtt_api.c.obj.d -o esp-idf/mqtt/CMakeFiles/__idf_mqtt.dir/mqtt_api.c.obj -c C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c: In function 'init_publisher_mqtt':
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c:75:90: error: expected expression before ',' token
   75 |         .credentials.authentication.certificate = (const char *) node_new_cert_pem_start,,
      |                                                                                          ^
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c: In function 'publish_data_si7021':
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c:255:13: warning: unused variable 'cbor_buffer' [-Wunused-variable]
  255 |     uint8_t cbor_buffer[512];  // Ajusta el tamaño según tus necesidades
      |             ^~~~~~~~~~~
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c: In function 'mqtt_handler':
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c:359:9: warning: unused variable 'msg_id' [-Wunused-variable]
  359 |     int msg_id;
      |         ^~~~~~
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c:358:30: warning: unused variable 'client' [-Wunused-variable]
  358 |     esp_mqtt_client_handle_t client = event->client;
      |                              ^~~~~~
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c: At top level:
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c:315:13: warning: 'reset_mqtt_client' defined but not used [-Wunused-function]
  315 | static void reset_mqtt_client(){
      |             ^~~~~~~~~~~~~~~~~
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c:251:13: warning: 'publish_data_si7021' defined but not used [-Wunused-function]
  251 | static void publish_data_si7021(int piso, int aula, int numero, cJSON *valor_sensor){
      |             ^~~~~~~~~~~~~~~~~~~
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c:227:13: warning: 'publish_data_sgp30' defined but not used [-Wunused-function]
  227 | static void publish_data_sgp30(int piso, int aula, int numero, cJSON *valor_sensor){
      |             ^~~~~~~~~~~~~~~~~~
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c:168:13: warning: 'suscribe_topic_provisioning' defined but not used [-Wunused-function]
  168 | static void suscribe_topic_provisioning(){
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/Lenovo/OneDrive/MASTER_IOT/ProyectoAreaTecnologia/ProyectoFinal-ANIOT-RPI1-RPI2/components/mqtt/mqtt_api.c:22:12: warning: 'sampling_frequency' defined but not used [-Wunused-variable]
   22 | static int sampling_frequency = 30;
      |            ^~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
